other/mutate-pod-binding/pod-patched01.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    foo: bar
  labels:
    app: busybox
  name: pod01
spec:
  containers:
  - name: busybox
    image: busybox:1.35
