other/mutate-pod-binding/testpod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: busybox
  name: mypod
spec:
  automountServiceAccountToken: false
  containers:
  - name: busybox
    image: busybox:1.35
    args:
    - sleep
    - 1d
