other/mutate-pod-binding/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-pod-binding
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
